y.output
   0  $accept : Prg $end

   1  Prg :
   2      | Fct Prg

   3  $$1 :

   4  Fct : Tint Tmain $$1 TPo Args TPf BodyMain

   5  $$2 :

   6  $$3 :

   7  Fct : Tint Tid $$2 TPo Args $$3 TPf BodyFct

   8  Args :
   9       | Arg ListeArgs

  10  Arg : Tint Tid

  11  ListeArgs :
  12            | Tvir Arg ListeArgs

  13  BodyMain : TAo Decls Instrs Return TAf

  14  $$4 :

  15  BodyFct : TAo $$4 Decls Instrs Return TAf

  16  Return : Treturn E Tpv

  17  Instrs :
  18         | Instr Instrs

  19  $$5 :

  20  If : Tif TPo E TPf $$5 Body

  21  $$6 :

  22  $$7 :

  23  While : Twhile $$6 TPo E TPf $$7 Body

  24  Invoc : Tprint TPo Tid TPf

  25  $$8 :

  26  Invoc : Tid TPo $$8 Params TPf

  27  Aff : Tid Tegal E

  28  Decl1 : Tid

  29  $$9 :

  30  Decl1 : Tid $$9 Tegal E

  31  Decls :
  32        | Tconst DeclList Tpv
  33        | Tint DeclList Tpv

  34  DeclList : Decl1
  35           | Decl1 Tvir DeclList

  36  Instr : If
  37        | While
  38        | For
  39        | Invoc Tpv
  40        | Aff Tpv

  41  E : Tnumber
  42    | Tid
  43    | E Tplus E
  44    | E Tless E
  45    | E Tfois E
  46    | E Tdiv E
  47    | E Tcmp E
  48    | E Tinf E
  49    | E Tsup E
  50    | E Tand E
  51    | E Tor E
  52    | TPo E TPf
  53    | Invoc

  54  Params :
  55         | E ParamNext

  56  ParamNext :
  57            | Tvir E ParamNext

  58  For : Tfor TPo Decl1 Tpv E Tpv Instr TPf Body

state 0
	$accept : . Prg $end  (0)
	Prg : .  (1)

	Tint  shift 1
	$end  reduce 1

	Prg  goto 2
	Fct  goto 3


state 1
	Fct : Tint . Tmain $$1 TPo Args TPf BodyMain  (4)
	Fct : Tint . Tid $$2 TPo Args $$3 TPf BodyFct  (7)

	Tmain  shift 4
	Tid  shift 5
	.  error


state 2
	$accept : Prg . $end  (0)

	$end  accept


state 3
	Prg : Fct . Prg  (2)
	Prg : .  (1)

	Tint  shift 1
	$end  reduce 1

	Prg  goto 6
	Fct  goto 3


state 4
	Fct : Tint Tmain . $$1 TPo Args TPf BodyMain  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 7


state 5
	Fct : Tint Tid . $$2 TPo Args $$3 TPf BodyFct  (7)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 8


state 6
	Prg : Fct Prg .  (2)

	.  reduce 2


state 7
	Fct : Tint Tmain $$1 . TPo Args TPf BodyMain  (4)

	TPo  shift 9
	.  error


state 8
	Fct : Tint Tid $$2 . TPo Args $$3 TPf BodyFct  (7)

	TPo  shift 10
	.  error


state 9
	Fct : Tint Tmain $$1 TPo . Args TPf BodyMain  (4)
	Args : .  (8)

	Tint  shift 11
	TPf  reduce 8

	Args  goto 12
	Arg  goto 13


state 10
	Fct : Tint Tid $$2 TPo . Args $$3 TPf BodyFct  (7)
	Args : .  (8)

	Tint  shift 11
	TPf  reduce 8

	Args  goto 14
	Arg  goto 13


state 11
	Arg : Tint . Tid  (10)

	Tid  shift 15
	.  error


state 12
	Fct : Tint Tmain $$1 TPo Args . TPf BodyMain  (4)

	TPf  shift 16
	.  error


state 13
	Args : Arg . ListeArgs  (9)
	ListeArgs : .  (11)

	Tvir  shift 17
	TPf  reduce 11

	ListeArgs  goto 18


state 14
	Fct : Tint Tid $$2 TPo Args . $$3 TPf BodyFct  (7)
	$$3 : .  (6)

	.  reduce 6

	$$3  goto 19


state 15
	Arg : Tint Tid .  (10)

	.  reduce 10


state 16
	Fct : Tint Tmain $$1 TPo Args TPf . BodyMain  (4)

	TAo  shift 20
	.  error

	BodyMain  goto 21


state 17
	ListeArgs : Tvir . Arg ListeArgs  (12)

	Tint  shift 11
	.  error

	Arg  goto 22


state 18
	Args : Arg ListeArgs .  (9)

	.  reduce 9


state 19
	Fct : Tint Tid $$2 TPo Args $$3 . TPf BodyFct  (7)

	TPf  shift 23
	.  error


state 20
	BodyMain : TAo . Decls Instrs Return TAf  (13)
	Decls : .  (31)

	Tint  shift 24
	Tconst  shift 25
	Tif  reduce 31
	Tfor  reduce 31
	Twhile  reduce 31
	Treturn  reduce 31
	Tid  reduce 31
	Tprint  reduce 31

	Decls  goto 26


state 21
	Fct : Tint Tmain $$1 TPo Args TPf BodyMain .  (4)

	.  reduce 4


state 22
	ListeArgs : Tvir Arg . ListeArgs  (12)
	ListeArgs : .  (11)

	Tvir  shift 17
	TPf  reduce 11

	ListeArgs  goto 27


state 23
	Fct : Tint Tid $$2 TPo Args $$3 TPf . BodyFct  (7)

	TAo  shift 28
	.  error

	BodyFct  goto 29


state 24
	Decls : Tint . DeclList Tpv  (33)

	Tid  shift 30
	.  error

	Decl1  goto 31
	DeclList  goto 32


state 25
	Decls : Tconst . DeclList Tpv  (32)

	Tid  shift 30
	.  error

	Decl1  goto 31
	DeclList  goto 33


state 26
	BodyMain : TAo Decls . Instrs Return TAf  (13)
	Instrs : .  (17)

	Tif  shift 34
	Tfor  shift 35
	Twhile  shift 36
	Tid  shift 37
	Tprint  shift 38
	Treturn  reduce 17

	Instrs  goto 39
	Instr  goto 40
	If  goto 41
	While  goto 42
	Invoc  goto 43
	Aff  goto 44
	For  goto 45


state 27
	ListeArgs : Tvir Arg ListeArgs .  (12)

	.  reduce 12


state 28
	BodyFct : TAo . $$4 Decls Instrs Return TAf  (15)
	$$4 : .  (14)

	.  reduce 14

	$$4  goto 46


state 29
	Fct : Tint Tid $$2 TPo Args $$3 TPf BodyFct .  (7)

	.  reduce 7


state 30
	Decl1 : Tid .  (28)
	Decl1 : Tid . $$9 Tegal E  (30)
	$$9 : .  (29)

	Tpv  reduce 28
	Tegal  reduce 29
	Tvir  reduce 28

	$$9  goto 47


state 31
	DeclList : Decl1 .  (34)
	DeclList : Decl1 . Tvir DeclList  (35)

	Tvir  shift 48
	Tpv  reduce 34


state 32
	Decls : Tint DeclList . Tpv  (33)

	Tpv  shift 49
	.  error


state 33
	Decls : Tconst DeclList . Tpv  (32)

	Tpv  shift 50
	.  error


state 34
	If : Tif . TPo E TPf $$5 Body  (20)

	TPo  shift 51
	.  error


state 35
	For : Tfor . TPo Decl1 Tpv E Tpv Instr TPf Body  (58)

	TPo  shift 52
	.  error


state 36
	While : Twhile . $$6 TPo E TPf $$7 Body  (23)
	$$6 : .  (21)

	.  reduce 21

	$$6  goto 53


state 37
	Invoc : Tid . TPo $$8 Params TPf  (26)
	Aff : Tid . Tegal E  (27)

	TPo  shift 54
	Tegal  shift 55
	.  error


state 38
	Invoc : Tprint . TPo Tid TPf  (24)

	TPo  shift 56
	.  error


state 39
	BodyMain : TAo Decls Instrs . Return TAf  (13)

	Treturn  shift 57
	.  error

	Return  goto 58


state 40
	Instrs : Instr . Instrs  (18)
	Instrs : .  (17)

	Tif  shift 34
	Tfor  shift 35
	Twhile  shift 36
	Tid  shift 37
	Tprint  shift 38
	Treturn  reduce 17

	Instrs  goto 59
	Instr  goto 40
	If  goto 41
	While  goto 42
	Invoc  goto 43
	Aff  goto 44
	For  goto 45


state 41
	Instr : If .  (36)

	.  reduce 36


state 42
	Instr : While .  (37)

	.  reduce 37


state 43
	Instr : Invoc . Tpv  (39)

	Tpv  shift 60
	.  error


state 44
	Instr : Aff . Tpv  (40)

	Tpv  shift 61
	.  error


state 45
	Instr : For .  (38)

	.  reduce 38


state 46
	BodyFct : TAo $$4 . Decls Instrs Return TAf  (15)
	Decls : .  (31)

	Tint  shift 24
	Tconst  shift 25
	Tif  reduce 31
	Tfor  reduce 31
	Twhile  reduce 31
	Treturn  reduce 31
	Tid  reduce 31
	Tprint  reduce 31

	Decls  goto 62


state 47
	Decl1 : Tid $$9 . Tegal E  (30)

	Tegal  shift 63
	.  error


state 48
	DeclList : Decl1 Tvir . DeclList  (35)

	Tid  shift 30
	.  error

	Decl1  goto 31
	DeclList  goto 64


state 49
	Decls : Tint DeclList Tpv .  (33)

	.  reduce 33


state 50
	Decls : Tconst DeclList Tpv .  (32)

	.  reduce 32


state 51
	If : Tif TPo . E TPf $$5 Body  (20)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 68
	Invoc  goto 69


state 52
	For : Tfor TPo . Decl1 Tpv E Tpv Instr TPf Body  (58)

	Tid  shift 30
	.  error

	Decl1  goto 70


state 53
	While : Twhile $$6 . TPo E TPf $$7 Body  (23)

	TPo  shift 71
	.  error


state 54
	Invoc : Tid TPo . $$8 Params TPf  (26)
	$$8 : .  (25)

	.  reduce 25

	$$8  goto 72


state 55
	Aff : Tid Tegal . E  (27)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 73
	Invoc  goto 69


state 56
	Invoc : Tprint TPo . Tid TPf  (24)

	Tid  shift 74
	.  error


state 57
	Return : Treturn . E Tpv  (16)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 75
	Invoc  goto 69


state 58
	BodyMain : TAo Decls Instrs Return . TAf  (13)

	TAf  shift 76
	.  error


state 59
	Instrs : Instr Instrs .  (18)

	.  reduce 18


state 60
	Instr : Invoc Tpv .  (39)

	.  reduce 39


state 61
	Instr : Aff Tpv .  (40)

	.  reduce 40


state 62
	BodyFct : TAo $$4 Decls . Instrs Return TAf  (15)
	Instrs : .  (17)

	Tif  shift 34
	Tfor  shift 35
	Twhile  shift 36
	Tid  shift 37
	Tprint  shift 38
	Treturn  reduce 17

	Instrs  goto 77
	Instr  goto 40
	If  goto 41
	While  goto 42
	Invoc  goto 43
	Aff  goto 44
	For  goto 45


state 63
	Decl1 : Tid $$9 Tegal . E  (30)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 78
	Invoc  goto 69


state 64
	DeclList : Decl1 Tvir DeclList .  (35)

	.  reduce 35


state 65
	E : TPo . E TPf  (52)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 79
	Invoc  goto 69


state 66
	E : Tnumber .  (41)

	.  reduce 41


state 67
	Invoc : Tid . TPo $$8 Params TPf  (26)
	E : Tid .  (42)

	TPo  shift 54
	Tcmp  reduce 42
	Tinf  reduce 42
	Tsup  reduce 42
	TPf  reduce 42
	Tpv  reduce 42
	Tvir  reduce 42
	Tplus  reduce 42
	Tless  reduce 42
	Tdiv  reduce 42
	Tfois  reduce 42
	Tand  reduce 42
	Tor  reduce 42


state 68
	If : Tif TPo E . TPf $$5 Body  (20)
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	TPf  shift 83
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	.  error


state 69
	E : Invoc .  (53)

	.  reduce 53


state 70
	For : Tfor TPo Decl1 . Tpv E Tpv Instr TPf Body  (58)

	Tpv  shift 90
	.  error


state 71
	While : Twhile $$6 TPo . E TPf $$7 Body  (23)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 91
	Invoc  goto 69


state 72
	Invoc : Tid TPo $$8 . Params TPf  (26)
	Params : .  (54)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	TPf  reduce 54

	E  goto 92
	Invoc  goto 69
	Params  goto 93


state 73
	Aff : Tid Tegal E .  (27)
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	Tpv  reduce 27


state 74
	Invoc : Tprint TPo Tid . TPf  (24)

	TPf  shift 94
	.  error


state 75
	Return : Treturn E . Tpv  (16)
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tpv  shift 95
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	.  error


state 76
	BodyMain : TAo Decls Instrs Return TAf .  (13)

	.  reduce 13


state 77
	BodyFct : TAo $$4 Decls Instrs . Return TAf  (15)

	Treturn  shift 57
	.  error

	Return  goto 96


state 78
	Decl1 : Tid $$9 Tegal E .  (30)
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	Tpv  reduce 30
	Tvir  reduce 30


state 79
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)
	E : TPo E . TPf  (52)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	TPf  shift 97
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	.  error


state 80
	E : E Tcmp . E  (47)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 98
	Invoc  goto 69


state 81
	E : E Tinf . E  (48)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 99
	Invoc  goto 69


state 82
	E : E Tsup . E  (49)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 100
	Invoc  goto 69


state 83
	If : Tif TPo E TPf . $$5 Body  (20)
	$$5 : .  (19)

	.  reduce 19

	$$5  goto 101


state 84
	E : E Tplus . E  (43)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 102
	Invoc  goto 69


state 85
	E : E Tless . E  (44)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 103
	Invoc  goto 69


state 86
	E : E Tdiv . E  (46)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 104
	Invoc  goto 69


state 87
	E : E Tfois . E  (45)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 105
	Invoc  goto 69


state 88
	E : E Tand . E  (50)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 106
	Invoc  goto 69


state 89
	E : E Tor . E  (51)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 107
	Invoc  goto 69


state 90
	For : Tfor TPo Decl1 Tpv . E Tpv Instr TPf Body  (58)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 108
	Invoc  goto 69


state 91
	While : Twhile $$6 TPo E . TPf $$7 Body  (23)
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	TPf  shift 109
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	.  error


state 92
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)
	Params : E . ParamNext  (55)
	ParamNext : .  (56)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tvir  shift 110
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	TPf  reduce 56

	ParamNext  goto 111


state 93
	Invoc : Tid TPo $$8 Params . TPf  (26)

	TPf  shift 112
	.  error


state 94
	Invoc : Tprint TPo Tid TPf .  (24)

	.  reduce 24


state 95
	Return : Treturn E Tpv .  (16)

	.  reduce 16


state 96
	BodyFct : TAo $$4 Decls Instrs Return . TAf  (15)

	TAf  shift 113
	.  error


state 97
	E : TPo E TPf .  (52)

	.  reduce 52


state 98
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E Tcmp E .  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tinf  shift 81
	Tsup  shift 82
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tcmp  reduce 47
	TPf  reduce 47
	Tpv  reduce 47
	Tvir  reduce 47
	Tand  reduce 47
	Tor  reduce 47


state 99
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E Tinf E .  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tcmp  reduce 48
	Tinf  reduce 48
	Tsup  reduce 48
	TPf  reduce 48
	Tpv  reduce 48
	Tvir  reduce 48
	Tand  reduce 48
	Tor  reduce 48


state 100
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E Tsup E .  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tcmp  reduce 49
	Tinf  reduce 49
	Tsup  reduce 49
	TPf  reduce 49
	Tpv  reduce 49
	Tvir  reduce 49
	Tand  reduce 49
	Tor  reduce 49


state 101
	If : Tif TPo E TPf $$5 . Body  (20)

	Body  shift 114
	.  error


state 102
	E : E . Tplus E  (43)
	E : E Tplus E .  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tdiv  shift 86
	Tfois  shift 87
	Tcmp  reduce 43
	Tinf  reduce 43
	Tsup  reduce 43
	TPf  reduce 43
	Tpv  reduce 43
	Tvir  reduce 43
	Tplus  reduce 43
	Tless  reduce 43
	Tand  reduce 43
	Tor  reduce 43


state 103
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E Tless E .  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	Tdiv  shift 86
	Tfois  shift 87
	Tcmp  reduce 44
	Tinf  reduce 44
	Tsup  reduce 44
	TPf  reduce 44
	Tpv  reduce 44
	Tvir  reduce 44
	Tplus  reduce 44
	Tless  reduce 44
	Tand  reduce 44
	Tor  reduce 44


state 104
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E Tdiv E .  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	.  reduce 46


state 105
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E Tfois E .  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)

	.  reduce 45


state 106
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E Tand E .  (50)
	E : E . Tor E  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	TPf  reduce 50
	Tpv  reduce 50
	Tvir  reduce 50
	Tand  reduce 50
	Tor  reduce 50


state 107
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)
	E : E Tor E .  (51)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	TPf  reduce 51
	Tpv  reduce 51
	Tvir  reduce 51
	Tand  reduce 51
	Tor  reduce 51


state 108
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)
	For : Tfor TPo Decl1 Tpv E . Tpv Instr TPf Body  (58)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tpv  shift 115
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	.  error


state 109
	While : Twhile $$6 TPo E TPf . $$7 Body  (23)
	$$7 : .  (22)

	.  reduce 22

	$$7  goto 116


state 110
	ParamNext : Tvir . E ParamNext  (57)

	TPo  shift 65
	Tnumber  shift 66
	Tid  shift 67
	Tprint  shift 38
	.  error

	E  goto 117
	Invoc  goto 69


state 111
	Params : E ParamNext .  (55)

	.  reduce 55


state 112
	Invoc : Tid TPo $$8 Params TPf .  (26)

	.  reduce 26


state 113
	BodyFct : TAo $$4 Decls Instrs Return TAf .  (15)

	.  reduce 15


state 114
	If : Tif TPo E TPf $$5 Body .  (20)

	.  reduce 20


state 115
	For : Tfor TPo Decl1 Tpv E Tpv . Instr TPf Body  (58)

	Tif  shift 34
	Tfor  shift 35
	Twhile  shift 36
	Tid  shift 37
	Tprint  shift 38
	.  error

	Instr  goto 118
	If  goto 41
	While  goto 42
	Invoc  goto 43
	Aff  goto 44
	For  goto 45


state 116
	While : Twhile $$6 TPo E TPf $$7 . Body  (23)

	Body  shift 119
	.  error


state 117
	E : E . Tplus E  (43)
	E : E . Tless E  (44)
	E : E . Tfois E  (45)
	E : E . Tdiv E  (46)
	E : E . Tcmp E  (47)
	E : E . Tinf E  (48)
	E : E . Tsup E  (49)
	E : E . Tand E  (50)
	E : E . Tor E  (51)
	ParamNext : Tvir E . ParamNext  (57)
	ParamNext : .  (56)

	Tcmp  shift 80
	Tinf  shift 81
	Tsup  shift 82
	Tvir  shift 110
	Tplus  shift 84
	Tless  shift 85
	Tdiv  shift 86
	Tfois  shift 87
	Tand  shift 88
	Tor  shift 89
	TPf  reduce 56

	ParamNext  goto 120


state 118
	For : Tfor TPo Decl1 Tpv E Tpv Instr . TPf Body  (58)

	TPf  shift 121
	.  error


state 119
	While : Twhile $$6 TPo E TPf $$7 Body .  (23)

	.  reduce 23


state 120
	ParamNext : Tvir E ParamNext .  (57)

	.  reduce 57


state 121
	For : Tfor TPo Decl1 Tpv E Tpv Instr TPf . Body  (58)

	Body  shift 122
	.  error


state 122
	For : Tfor TPo Decl1 Tpv E Tpv Instr TPf Body .  (58)

	.  reduce 58


32 terminals, 31 nonterminals
59 grammar rules, 123 states
